--- a/_includes/head.html
+++ b/_includes/head.html
@@ -71,5 +71,14 @@
   <script src="https://cdn.jsdelivr.net/combine/npm/popper.js@1.15.0,npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" async></script>
 
   {% include js-selector.html %}
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-SGXMC466WN"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+  	gtag('config', 'G-SGXMC466WN');
+	</script>
 
 </head>
